# Promptly-V3

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
reference-code/backend-v2/: CLAUDE.md  agent.py  agents.py  api.py  architecture.md  chat_agent.py  main.py  prompt.py  pyproject.toml  sample-prompt  schemas.py  tools.py  utils.py
reference-code/backend-v2/.bmad-core/: install-manifest.yaml
reference-code/backend-v2/docs/: prd.md
reference-code/backend-v2/docs/stories/: 1.1.relevance-scorer.md  1.2.context-builder.md  1.3.chat-agent-integration.md  1.4.metrics-validation.md
reference-code/backend-v2/e2b-template/: build.py  e2b.Dockerfile  e2b.toml  template.py
reference-code/backend-v2/generated_apps/app-f396c734/: README.md  architecture.md
reference-code/backend-v2/generated_apps/app-f396c734/app/: layout.tsx  page.tsx
reference-code/backend-v2/generated_apps/app-f396c734/components/: Checkbox.tsx  EmptyState.tsx  TaskCard.tsx  TaskFilter.tsx  TaskForm.tsx  TaskHeader.tsx  TaskList.tsx  TaskSearch.tsx
reference-code/backend-v2/generated_apps/nextjs-app/: README.md  architecture.md
reference-code/backend-v2/prompts/: __init__.py  architecture_prompt.py  chat_prompt.py  coder_prompt.py
reference-code/backend-v2/scripts/: benchmark_context.py
reference-code/backend-v2/services/: __init__.py  context_builder.py  sandbox.py  sandbox_context.py  session_manager.py
reference-code/backend-v2/tests/: __init__.py  test_context_builder.py  test_smart_context_improvement.py
(+151 files in other folders)
